Verification for Hybrid node pool/Case-5-Allow-ingress-from-pods-in-a-namespace/Networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: limit-ingress-from-namespace
  namespace: development
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              purpose: default
          podSelector:
            matchLabels:
              app: apiserver
